--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "license": "MIT",
   "private": false,
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -22,6 +24,7 @@
     "core-js": "^3.6.5",
     "printf": "^0.6.1",
     "sweetalert2": "^11.3.1",
+    "tippy.js": "^6.3.7",
     "vue": "^2.6.11"
   },
   "devDependencies": {
