--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bignumber.js": "^9.0.2",
     "core-js": "^3.6.5",
     "printf": "^0.6.1",
+    "quill": "^1.3.6",
     "sweetalert2": "^11.3.1",
     "tippy.js": "^6.3.7",
     "vue": "^2.6.11"
