--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^3.6.5",
     "printf": "^0.6.1",
     "quill": "^1.3.6",
+    "sortablejs": "^1.15.0",
     "sweetalert2": "^11.3.1",
     "tippy.js": "^6.3.7",
     "vue": "^2.6.11"
